UtahLiveDataTest/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Source_Group__c</fullName>
        <description>Provide the Program under which you are currently working.</description>
        <inlineHelpText>Provide the Program under which you are currently working.</inlineHelpText>
        <label>Source Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HRSA</fullName>
                </value>
                <value>
                    <fullName>FEMA</fullName>
                </value>
                <value>
                    <fullName>NASA</fullName>
                </value>
                <value>
                    <fullName>DOJ</fullName>
                </value>
                <value>
                    <fullName>USDA</fullName>
                </value>
                <value>
                    <fullName>OPIC</fullName>
                </value>
                <value>
                    <fullName>OMB</fullName>
                </value>
                <value>
                    <fullName>MaintenanceMax</fullName>
                </value>
                <value>
                    <fullName>Saas Practice</fullName>
                </value>
                <value>
                    <fullName>SMB</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staging_app_failure__c</fullName>
        <label>Staging app failure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staging_deployment_success__c</fullName>
        <label>Staging deployment success</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The current status of the issue.</description>
        <inlineHelpText>The current status of the issue.</inlineHelpText>
        <label>Internal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Categorization__c</fullName>
        <description>Sub categorization of the issue.</description>
        <inlineHelpText>Sub categorization of the issue.</inlineHelpText>
        <label>Sub-Categorization</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect - Business Rule</fullName>
                </value>
                <value>
                    <fullName>Defect - Code Logic</fullName>
                </value>
                <value>
                    <fullName>Defect - Configuration Issue</fullName>
                </value>
                <value>
                    <fullName>Defect - Data Issue</fullName>
                </value>
                <value>
                    <fullName>Defect - Environment Specific</fullName>
                </value>
                <value>
                    <fullName>Defect - Installation Issue</fullName>
                </value>
                <value>
                    <fullName>Defect - On Screen Instructions</fullName>
                </value>
                <value>
                    <fullName>Defect - Performance</fullName>
                </value>
                <value>
                    <fullName>Defect - UAT Feedback</fullName>
                </value>
                <value>
                    <fullName>Defect - UI Formatting</fullName>
                </value>
                <value>
                    <fullName>Enhancement - Feedback</fullName>
                </value>
                <value>
                    <fullName>Enhancement - Streamlining</fullName>
                </value>
                <value>
                    <fullName>New Requirement - Business Rule</fullName>
                </value>
                <value>
                    <fullName>New Requirement - New Feature</fullName>
                </value>
                <value>
                    <fullName>New Requirement - Policy Change</fullName>
                </value>
                <value>
                    <fullName>New Requirement - Program Change</fullName>
                </value>
                <value>
                    <fullName>Access Control - New Account</fullName>
                </value>
                <value>
                    <fullName>Access Control - Update Permissions</fullName>
                </value>
                <value>
                    <fullName>Other - Content Update</fullName>
                </value>
                <value>
                    <fullName>Other - Product Upgrade</fullName>
                </value>
                <value>
                    <fullName>Other - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_system__c</fullName>
        <label>Sub-system</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBIR</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>BAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier1_Analysis__c</fullName>
        <description>Detailed analysis from Helpdesk Tier 1 Team</description>
        <inlineHelpText>Detailed analysis from Helpdesk Tier 1 Team</inlineHelpText>
        <label>Tier1 Analysis</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier2_Analysis__c</fullName>
        <inlineHelpText>Initial Tier 2 Analysis for the issue assigned to Tier 2</inlineHelpText>
        <label>Tier2 Analysis</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TrackedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the field which is filed with the person of Tier 1 member Id.</description>
        <label>Tracked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TrackedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>URL location of the defect</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for batch updates of the Current Status</description>
        <label>Update Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserProfileName__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <label>User Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vuln_Scan_After_Time__c</fullName>
        <description>Date And Time You Want The Scan To Be Performed.</description>
        <inlineHelpText>Date And Time You Want The Scan To Be Performed.</inlineHelpText>
        <label>Vuln Scan After Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vuln_scan_clean__c</fullName>
        <label>Vuln scan clean</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vulnerability_Scan_URL__c</fullName>
        <description>URL For The Scan. Please Provide Username And Password In The Description If Applicable.</description>
        <inlineHelpText>URL For The Scan. Please Provide Username And Password In The Description If Applicable.</inlineHelpText>
        <label>Vulnerability Scan URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Agency__c</fullName>
        <label>Web Agency</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isAssigned__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Closed&apos;), true, IF($User.Id == OwnerId,false,true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isAssigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <description>Is the Case Closed</description>
        <formula>ISPICKVAL(Status,&apos;Closed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the Case Closed</inlineHelpText>
        <label>isClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEditBtnEnabled__c</fullName>
        <formula>isOwnerQueue__c || isSubStatusClosed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isEditBtnEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEditEnabled__c</fullName>
        <formula>if( $User.IsExternalUser__c , isClosed__c , isAssigned__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isEditEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEnabledFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isEnabledFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isOwnerQueue__c</fullName>
        <formula>If(BEGINS(OwnerId,&quot;00G&quot;),true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isOwnerQueue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSubStatusClosed__c</fullName>
        <formula>ISPICKVAL(Status__c,&apos;Closed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isSubStatusClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTier1LoggedIn__c</fullName>
        <formula>IF($User.ProfileName__c  = &apos;TR1&apos; || $User.ProfileName__c  = &apos;System Administrator&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isTier1LoggedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTrackingUser__c</fullName>
        <description>This field is true if Current User is same as Tracked By User</description>
        <formula>IF(TrackedBy__c == $User.Id ,true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isTrackingUser</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>GovGrants_Helpdesk_Tier1_Case1</fullName>
        <filterScope>Queue</filterScope>
        <label>GovGrants_Helpdesk_Tier1</label>
        <queue>GovGrants_Helpdesk_Tier1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GovGrants_Helpdesk_Tier2_Case1</fullName>
        <filterScope>Queue</filterScope>
        <label>GovGrants_Helpdesk_Tier2</label>
        <queue>GovGrants_Helpdesk_Tier2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InternationalEscalations_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Escalations</label>
        <queue>InternationalEscalations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InternationalPlatinumGold_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Platinum/Gold</label>
        <queue>InternationalPlatinumGold</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InternationalSilverBronze_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>International - Silver/Bronze</label>
        <queue>InternationalSilverBronze</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>Case_Number__c</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>USAID – PAEGC</value>
        </filters>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>Case_Number__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>USAID – PAEGC</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Created_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CLOSED</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Detailed_Comments__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>DC_DoH</value>
        </filters>
        <label>My Created Cases</label>
    </listViews>
    <listViews>
        <fullName>PartnerRelations_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Partner Relations</label>
        <queue>PartnerRelations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>USEscalations_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Escalations</label>
        <queue>USEscalations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>USPlatinumGold_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Platinum/Gold</label>
        <queue>USPlatinumGold</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>USSilverBronze_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>US - Silver/Bronze</label>
        <queue>USSilverBronze</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Only_Admin_Can_Change_Owner_if_not_own</fullName>
        <active>false</active>
        <description>Only Admin can change the owner field of records which are not owned by user himself</description>
        <errorConditionFormula>AND( ISCHANGED( OwnerId ) , PRIORVALUE(OwnerId)&lt;&gt; $User.Id ,  $Profile.Name &lt;&gt; &apos;System Administrator&apos; )</errorConditionFormula>
        <errorMessage>You can not change records you do not own.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ResolutionComments_Mandatory_To_Close</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Status)=&apos;Closed&apos; &amp;&amp; ISBLANK(Detailed_Comments__c)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Please provide Resolution comments before case can be closed</errorMessage>
    </validationRules>
</CustomObject>